--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Ultimate RPG</title>
     <script src="https://kit.fontawesome.com/46962466a1.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="stylesheets/index.css">
   </head>
   
   <body class='pt-3 pb-3 bg-light d-flex flex-column justify-content-between' style='height: 100%'>
@@ -101,6 +102,9 @@
         </div>
       </div>
     </div>
+    <div class='through' id="mouseCover">
+      <i class="through fas fa-crosshairs"></i>
+    </div>
   </body>
 
   <script src="javascript/character_class/character.js"></script>  
@@ -112,4 +116,5 @@
   <script src="javascript/draw.js"></script>  
   <script src="javascript/game.js"></script>  
   <script src="javascript/app.js"></script>  
+  <script src="javascript/index.js"></script>
 </html>
